--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Recommendation System</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Book Recommender System</title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+<style>
+    .text-white{
+        color:white
+    }
+</style>
+<body style="background-color:black">
 
-<body style="background-color: black;">
-    <header class="bg-dark text-white py-3">
-        <h1>Movie Recommendation System</h1>
-        <nav class="nav justify-content-center">
-            <a class="nav-link text-white" href="#">Home</a>
-            <a class="nav-link text-white" href="#">Recommend</a>
-            <a class="nav-link text-white" href="#">Contact</a>
-        </nav>
-    </header>
-    <!-- Main content of the page goes here -->
+    <nav class="navbar" style="background-color:#00a65a">
+        <a class="navbar-brand">My Book recommender</a>
+        <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/recommend">Recommend</a></li>
+            <li><a>Contact</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <h1 class="text-white" style="font-size: 50px">Top 50 Books</h1>
+            <div class="col-md-12">
+                <h1 class="text-white" style="font-size:50px">Top 50 Books</h1>
             </div>
 
-          
-            
-            
-           <!-- Define a template for the movie card -->
-
-           
-           <div class="col-3" style="margin-top: 50px;">
-               <div class="card" style="background-color: black;">
-                   <div class="card-body">
-                    <ul>  
-                    {% for book_name in book_names %}
-                    <p>hrloo</p>
-                    {% endfor %}
-                </ul> 
-                   </div>
-               </div>
-           </div>
-       
-       
+            {% for i in range(book_name|length) %}
+                <div class="col-md-3" style="margin-top:50px">
+                    <div class="card">
+                        <div class="card-body">
+                            <img class="card-img-top" src="{{ image[i] }}">
+                            <p class="text-white">{{ book_name[i] }}</p>
+                            <h4 class="text-white">{{ author[i] }}</h4>
+                            <h4 class="text-white">Votes - {{ votes[i] }}</h4>
+                            <h4 class="text-white">Rating - {{ rating[i] }}</h4>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
 
 
-
-            
-       
         </div>
-            
     </div>
-   
 
 </body>
-
 </html>
